--- a/Pertemuan3/hello_world.html
+++ b/Pertemuan3/hello_world.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World Javascript</title>
+    <title>Belajar Javascript dari Nol</title>
+    <script>
+        // ini adalah penulisan kode javascript
+        // di dalam tag <head>
+        console.log("Hello 35 dari Head");
+    </script>
 </head>
 <body>
+    <p>Tutorial Javascript untuk Pemula</p>
     <script>
-        console.log("Saya belajar Javascript");
-        document.write("Hello World!");
+        // ini adalah penulisan kode javascript
+        // di dalam tag <body>
+        console.log("Hello 35 dari body");
     </script>
 </body>
 </html>
+
+<a href="#" onclick="alert('Yey!')">Klik aku!</a>
